youschef/src/components/Recipe/Recipe.css
.recipeContainer {
  height: 100%;
  width: 100%;
}

.singleRecipeContainer1 {
  /* border: 1px solid black; */
  position: relative;
  height: 230px;
  width: 345px;
  margin: 0 auto 17px auto;
  border-radius: 16px;
  background-image: url('https://res.cloudinary.com/darrin-im/image/upload/v1569277230/CaesarSaladSmall_hnuz49.jpg');
  background-position: cover;
  background-repeat: no-repeat;
  background-size: auto;
  box-shadow: 2px 4px 25px rgba(0, 0, 0, .2);
}
.singleRecipeContainer2 {
  /* border: 1px solid black; */
  position: relative;
  height: 230px;
  width: 345px;
  margin: 0 auto 17px auto;
  border-radius: 16px;
  background-image: url('https://files.slack.com/files-pri/T0351JZQ0-FNRG6EQ6A/parm_small.png');
  background-position: cover;
  background-repeat: no-repeat;
  background-size: auto;
  box-shadow: 2px 4px 25px rgba(0, 0, 0, .2);
}
.singleRecipeContainer3 {
  /* border: 1px solid black; */
  position: relative;
  height: 230px;
  width: 345px;
  margin: 0 auto 17px auto;
  border-radius: 16px;
  background-image: url('https://files.slack.com/files-pri/T0351JZQ0-FNNRTQZJQ/chann_small.png');
  background-position: cover;
  background-repeat: no-repeat;
  background-size: auto;
  box-shadow: 2px 4px 25px rgba(0, 0, 0, .2);
}

.recipeNameContainer {
  /* border: 1px solid black;
  margin-top: 15px; */
  position: absolute;
  right: 0;
  margin-top: 15px;
  height: 39px;
  width: 330px;
  background-color: rgba(255, 255, 255, 0.8);
  display: flex;
  justify-content: space-between;
  border-radius: 5px;
}
.recipeName {
  font-size: 28px;
  font-weight: 400;
  margin: 0 0 0 8px;
  padding-top: 2px;
}
.fa-stopwatch:before {
  font-size: 30px;
  margin-right: 25px;
  margin-top: 20px;
}
.fa-stopwatch {
  margin-top: 5px;
}
.customizeButton {
  /* border: 1px solid red; */
  color: white;
  border: none;
  font-size: 18px;
  letter-spacing: 1.8px;
  border-radius: 70px;
  background-color: rgba(98, 136, 148, 0.9);
  position: absolute;
  bottom: 7px;
  right: 5px;
  height: 44px;
  width: 149px;
}
.customizeButton:hover {
  color: rgba(98, 136, 148, 0.9);
  background-color: white;
  cursor: pointer;
  transition:
    background-color 0.3s,
    color 0.3s;
}
.scheduleButton {
  border: none;
  height: 54px;
  width: 258px;
  border-radius: 70px;
  background-color: #31464d;
  color: white;
  font-size: 20px;
  letter-spacing: 2px;
  margin-top: 20px;
  margin-left: 50px;
  box-shadow: 2px 4px 25px rgba(0, 0, 0, .2)
}
.scheduleButton:hover {
  background-color: white;
  color: #31464d;
  cursor: pointer;
  transition:
    background-color 0.3s,
    color 0.3s;
}
.chooseIngredients {
  font-size: 24px;
  font-weight: 500;
  margin-left: 33px;
  margin-bottom:10px;
  color: #628894;
}


/* BELOW IS STYLING FOR THE STEP PROGRESS BAR */

.progressBarContainer {
  display: flex;
  justify-content: space-around;
  margin: 30px 0;
}
.progressCircle {
  height: 60px;
  width: 60px;
  border: 2px dotted #628894;
  border-radius: 100%;
  line-height: 60px;
  text-align: center;
  font-size: 11px;
  font-weight: 700;
  background-color: white;
}
.progressCircle:first-of-type {
  background-color: #31464c;
  color: white;
  border: 2px solid #628894;
}
.progressBarContainer:after {
  width: 80%;
  height: 2px;
  /* left: -5%; */
  right: 34px;
  content: '';
  position: absolute;
  top: 119px;
  background-color: #628894;
  z-index: -1;
}
.desktopMainPic {
  background-image: url('https://res.cloudinary.com/darrin-im/image/upload/v1569336059/BannerPic_duq5fo.jpg');
  display: none;
}
.ingredientsListContainer {
  height: 215px;
  width: 330px;
  background-color: rgba(255, 255, 255, 0.8);
  color: black;
  margin: 0;
  position: absolute;
  top: 15px;
  right: 0;
  bottom: 0;
  border-radius: 5px;
  border-bottom-right-radius: 15px;
}
.ingredientsHeader {
  display: flex;
  justify-content: space-between;
  font-size: 28px;
}
h5 {
  margin: 0;
}
.ingredientsUl {
  display: flex;
  flex-direction: column;
  flex-flow: column;
  flex-wrap:wrap;
  height: 120px;
  padding: 0 0 3px 0;
}
.ingredientsLi {
  list-style-type: none;
  margin-left: 20px;
  font-size: 20px;
  vertical-align: baseline;
}
.ingredientsLi:before {
  content: url('https://api.iconify.design/ei:minus.svg?flip=horizontal&height=25');
  margin-right: 5px;
  vertical-align: baseline;
}
.customizeIngredientsButton {
  color: white;
  border: none;
  font-size: 22px;
  letter-spacing: 2.2px;
  border-radius: 70px;
  background-color: rgb(98, 136, 148);
  height: 44px;
  width: 208px;
  margin-left: 118px;
  position: absolute;
  bottom: 7px;
}
.plusSign {
  font-size: 25px;
}
.cancel {
  margin-right: 28px;
  margin-top: 7px;
  cursor: pointer;
}

@media (min-width: 768px) {
  .desktopMainPic {
    display: block;
    height: 350px;
    width: 100%;
    background-repeat: no-repeat;
    background-position: cover;
  }
  .progressBarContainer {
    max-width: 337px;
    margin: 36px auto 0 auto;
  }
  .progressBarContainer:after {
    width: 18%;
    top: 474px;
    right: 580px;
  }
  .recipesContainer {
    display: flex;
  }
  .scheduleButton {
    margin: 20px auto 20px 600px;
  }
  .chooseIngredients {
    margin-left: 85px;
  }
}

